[gd_scene load_steps=14 format=3 uid="uid://chbr28imsjgnv"]

[ext_resource type="Script" uid="uid://d05d2u5krdsbn" path="res://scripts/menus_ui/health_indicator.gd" id="1_41b34"]
[ext_resource type="Shader" uid="uid://b7m3owcdweg44" path="res://resources/Materials_Shaders/hull_health_shader.gdshader" id="1_b2c71"]
[ext_resource type="Script" uid="uid://hxemtdb023e5" path="res://scripts/menus_ui/hull_icon.gd" id="1_ddvhb"]
[ext_resource type="Shader" uid="uid://ciiao8asu4lm4" path="res://resources/Materials_Shaders/shield_health_shader.gdshader" id="1_tnw4a"]
[ext_resource type="Texture2D" uid="uid://biixbk5sucnfs" path="res://assets/textures/ships/ship_sprites.png" id="1_vpj4s"]
[ext_resource type="Script" uid="uid://dmusguquxjkea" path="res://scripts/menus_ui/ship_shield_hud.gd" id="2_bmthh"]
[ext_resource type="Shader" uid="uid://8fi6r1et5itn" path="res://resources/Materials_Shaders/progress_bar.gdshader" id="7_a6nrc"]
[ext_resource type="Texture2D" uid="uid://bca0g8fk5xmfo" path="res://assets/textures/UI/energy_indicator_WHOLE.png" id="8_p5oyd"]
[ext_resource type="Script" uid="uid://ddy8qr8tanrj2" path="res://scripts/menus_ui/progress_bar.gd" id="9_p5oyd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bmthh"]
shader = ExtResource("1_tnw4a")
shader_parameter/color = Color(0.36, 0.527, 0.837, 1)
shader_parameter/health_ratio = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tnw4a"]
shader = ExtResource("1_b2c71")
shader_parameter/high_health_color = Color(0, 1, 0, 1)
shader_parameter/mid_health_color = Color(1, 0.65, 0, 1)
shader_parameter/low_health_color = Color(1, 0, 0, 1)
shader_parameter/mid_health_threshold = 0.6
shader_parameter/empty_color = Color(0.1, 0.1, 0.1, 1)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 1.0
shader_parameter/health_ratio = 1.0
shader_parameter/fill_direction = 2
shader_parameter/region_uv_offset = Vector2(0, 0)
shader_parameter/region_uv_size = Vector2(1, 1)
shader_parameter/content_bounds_in_region_uv_pos = Vector2(0, 0)
shader_parameter/content_bounds_in_region_uv_size = Vector2(1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2c71"]
atlas = ExtResource("1_vpj4s")
region = Rect2(48, 96, 48, 48)
filter_clip = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsmsl"]
shader = ExtResource("7_a6nrc")
shader_parameter/bar_mode = 4
shader_parameter/fill_mode = 2
shader_parameter/segment_count = 10
shader_parameter/discrete_fill_amount = 10
shader_parameter/fade_fill_amount = 1.0
shader_parameter/pour_fill_amount = 1.0
shader_parameter/animation_speed = 0.5
shader_parameter/flash_type = 3
shader_parameter/flash_segment = 0
shader_parameter/flash_intensity = 0.0
shader_parameter/single_segment_previous_fill = 1.0
shader_parameter/single_segment_current_fill = 1.0
shader_parameter/single_segment_flash_intensity = 0.8
shader_parameter/flash_from_segment = 0
shader_parameter/flash_to_segment = 0
shader_parameter/single_segment_fade_from = 1.0
shader_parameter/single_segment_fade_to = 1.0
shader_parameter/single_segment_fade_progress = 0.0
shader_parameter/drain_previous_fill = 1.0
shader_parameter/drain_current_fill = 1.0
shader_parameter/drain_time_progress = 0.0
shader_parameter/background_color = Color(0.1, 0.1, 0.1, 1)
shader_parameter/filled_color = Color(1, 0.85, 0, 1)
shader_parameter/border_color = Color(0, 0, 0, 1)
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/drain_flash_color = Color(1, 1, 1, 1)
shader_parameter/custom_frame = true
shader_parameter/frame_texture = ExtResource("8_p5oyd")
shader_parameter/frame_trim = 0.0
shader_parameter/alpha_threshold = 0.69
shader_parameter/scan_steps = 15
shader_parameter/edge_smoothness = 0.02
shader_parameter/mask_expansion = 0.0
shader_parameter/frame_edge_opacity = 0.9
shader_parameter/fluid_base_color = Color(0.2, 0.6, 1, 1)
shader_parameter/fluid_highlight_color = Color(0.8, 0.9, 1, 1)
shader_parameter/fluid_shadow_color = Color(0.1, 0.3, 0.6, 1)
shader_parameter/fluid_flow_speed = 1.5
shader_parameter/fluid_turbulence = 1.0
shader_parameter/fluid_noise_scale = 6.0
shader_parameter/gas_mode = false
shader_parameter/gas_intensity = 0.8
shader_parameter/effect_mode = 0
shader_parameter/effect_strength = 0.3
shader_parameter/effect_speed = 1.5
shader_parameter/wave_thickness = 0.1
shader_parameter/bubbles_aspect_ratio = 1.0
shader_parameter/vertical_gradient = true
shader_parameter/V_gradient_strength = 0.6
shader_parameter/horizontal_gradient = false
shader_parameter/H_gradient_strength = 0.75
shader_parameter/segment_gap = 0.0
shader_parameter/universal_border_size = 0.0
shader_parameter/horizontal_border_size = 1.0
shader_parameter/inner_border_thickness_multiplier = 1.0
shader_parameter/outer_border_size = 3.0
shader_parameter/slant_amount = 0.0
shader_parameter/scale = -0.168
shader_parameter/x_offset = 0.0
shader_parameter/slant_clip_margin = 0.0

[node name="health_indicator" type="Control"]
modulate = Color(1, 1, 0, 1)
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 60.0
script = ExtResource("1_41b34")

[node name="shield_icon" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bmthh")
custom_minimum_size = Vector2(80, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bmthh")

[node name="ReferenceRect" type="ReferenceRect" parent="shield_icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="hull_icon" type="TextureRect" parent="." node_paths=PackedStringArray("shield_node")]
material = SubResource("ShaderMaterial_tnw4a")
layout_mode = 0
offset_left = 64.0
offset_top = 5.0
offset_right = 112.0
offset_bottom = 53.0
rotation = 1.5708
texture = SubResource("AtlasTexture_b2c71")
stretch_mode = 3
script = ExtResource("1_ddvhb")
shield_node = NodePath("../shield_icon")
fill_color = Color(0, 0.7187, 0.290697, 1)

[node name="energy_bar" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_hsmsl")
layout_mode = 0
offset_left = 80.0
offset_top = 60.0
offset_right = 140.0
offset_bottom = 80.0
rotation = -1.5708
script = ExtResource("9_p5oyd")
